force-app/main/default/objects/Attendance__c/Attendance__c.object-meta.xml
<CustomObject>
    <label>勤怠管理</label>
    <nameField>
        <displayFormat>ATT-{0000}</displayFormat>
        <label>勤怠管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>