force-app/main/default/objects/Attendance__c/fields/Break_Time__c.field-meta.xml
<CustomField>
    <fullName>Break_Time__c</fullName>
    <defaultValue>60</defaultValue>
    <label>休憩時間（分）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>