force-app/main/default/objects/Attendance__c/fields/ClockIn__c.field-meta.xml
<CustomField>
    <fullName>ClockIn__c</fullName>
    <label>出勤日時</label>
    <type>DateTime</type>
</CustomField>