force-app/main/default/objects/Attendance__c/fields/ClockOut__c.field-meta.xml
<CustomField>
    <fullName>ClockOut__c</fullName>
    <label>退勤日時</label>
    <type>DateTime</type>
</CustomField>