force-app/main/default/objects/Attendance__c/fields/Work_Category__c.field-meta.xml
<CustomField>
    <fullName>Work_Category__c</fullName>
    <label>勤務区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>テレワーク</fullName>
            </value>
            <value>
                <fullName>出張</fullName>
            </value>
            <value>
                <fullName>帰社</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>