force-app/main/default/objects/Attendance__c/fields/WorkHours__c.field-meta.xml
<CustomField>
    <fullName>WorkHours__c</fullName>
    <formula>IF(
  AND(NOT(ISBLANK(ClockOut__c)), NOT(ISBLANK(ClockIn__c))),
  (ClockOut__c - ClockIn__c) * 24 - (BLANKVALUE(Break_Time__c, 0) / 60),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>勤務時間</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>